--- a/web/css/style.css
+++ b/web/css/style.css
@@ -141,3 +141,38 @@ h2 {
       transform: rotate(360deg);
     }
   }
+
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 24px; /* Size of the info icon */
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 340px;
+    background-color: transparent;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+.tooltip:hover {
+  text-decoration: underline;
+}
